image placement and not showing fixed

--- a/includes/css/editprofile.css
+++ b/includes/css/editprofile.css
@@ -19,6 +19,7 @@
 .images {
   float: left;
   width: 30%;
+  background-image: url('forms/profpic-uploads/unknown.jpg');
 }
 
 .image
