--- a/includes/css/profile.css
+++ b/includes/css/profile.css
@@ -63,7 +63,7 @@ a
   border-radius:6px;
   position: absolute;
   left: 70px;
-  top: 80px;
+  top: 118px;
   box-shadow: 0px 1px 10px 1px #03C04A;
 	background-image: url('../forms/profpic-uploads/unknown.jpg');
 	background-size: 100% 100%;
@@ -81,7 +81,7 @@ a
   min-width: 300px;
   background: white;
 	background-size: 100% 100%;
-	margin-bottom: 10px;
+	margin-bottom: 40px;
 }
 .name p
 {
